remove comments, fix broken style on workspace page

--- a/src/styles/components/role-management/_role-workspace.scss
+++ b/src/styles/components/role-management/_role-workspace.scss
@@ -1,8 +1,7 @@
 .role-workspace{
+  max-width: initial;
+  padding: 0 .5em;
 
-  .usa-grid-full{
-    max-width: initial;
-  }
   .create-btn{
     padding-right:5em;
     padding-top:1em;
